tests/src/frontend/syntax/invalid/frozen_constraint_2.sk
fun no(x : frozen): void { void }
